# TriForce

./: CMakeLists.txt  README.md  eval_bash.sh  main.cpp
application/: CMakeLists.txt
application/nn/: CMakeLists.txt
application/nn/include/: layers.h  llmConfig.h  plain_layers.h
common/: CMakeLists.txt
common/include/: globals.h  my_assert.h  my_math.h
common/network/: CMakeLists.txt
common/network/include/: comms.h
common/network/src/: comms.cpp
common/ring/: CMakeLists.txt
common/ring/include/: tensor.h
common/src/: globals.cpp  my_math.cpp
crypto/: CMakeLists.txt
crypto/arithmetic_secret_sharing/: CMakeLists.txt
crypto/arithmetic_secret_sharing/include/: ass_protocols.h
crypto/arithmetic_secret_sharing/src/: ass_protocols.cpp
crypto/parameters/include/: params.h
crypto/replicated_secret_sharing/: CMakeLists.txt
crypto/replicated_secret_sharing/include/: replicated_secret_sharing.h  rss_protocols.h
crypto/replicated_secret_sharing/src/: rss_protocols.cpp
network_config/: multi_netns.sh
secure_model/: CMakeLists.txt
secure_model/include/: loader.h  party3pc.h
secure_model/src/: party3pc.cpp
